--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
@@ -24,6 +23,9 @@
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
+    "bcrypt": "^3.0.6",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "nodemon": "^1.19.1"
   }
 }
