a lot of new things from maxance. TOGGLE, FORMS WORKING

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "engines": {
     "node": "8.9.4"
+  },
+  "dependencies": {
+    "react-pdf": "^4.1.0",
+    "react-share": "^3.0.0"
   }
 }
